Updated data structures

--- a/self_citations/create_array_self_citations.ipynb
+++ b/self_citations/create_array_self_citations.ipynb
@@ -305,15 +305,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "count = 0\n",
     "f = open(path+'progress.txt','w')\n",
-    "for type_cit in types_cit:\n",
+    "for type_cit in ['self','co']:#types_cit:\n",
     "    references = {d:sparse.lil_matrix((len(authors_disc_idx[d]),nb_years)) for d in list_disciplines}\n",
     "    citations = {d:sparse.lil_matrix((len(authors_disc_idx[d]),nb_years)) for d in list_disciplines}\n",
     "    for i in range(nb_citants):\n",
@@ -382,9 +380,24 @@
     "            f.flush()\n",
     "    for disc in list_disciplines:\n",
     "        with open('{}/arrays/citations_{}_{}_array_norm.npz'.format(path,type_cit,disc),'wb') as f2:\n",
-    "            sparse.save_npz(f2,citations[disc])\n",
+    "            sparse.save_npz(f2,sparse.csr_matrix(citations[disc]))\n",
     "        with open('{}/arrays/references_{}_{}_array_norm.npz'.format(path,type_cit,disc),'wb') as f2:\n",
-    "            sparse.save_npz(f2,references[disc])"
+    "            sparse.save_npz(f2,sparse.csr_matrix(references[disc]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for disc in list_disciplines:\n",
+    "    with open('{}/arrays/citations_{}_{}_array_norm.npz'.format(path,type_cit,disc),'wb') as f2:\n",
+    "        sparse.save_npz(f2,sparse.csr_matrix(citations[disc]))\n",
+    "    with open('{}/arrays/references_{}_{}_array_norm.npz'.format(path,type_cit,disc),'wb') as f2:\n",
+    "        sparse.save_npz(f2,sparse.csr_matrix(references[disc]))"
    ]
   },
   {
