--- a/py/get_similarity_mm.ipynb
+++ b/py/get_similarity_mm.ipynb
@@ -42,7 +42,7 @@
     "tfidf_path = \"/mnt/disks/sdb/data/pub_full_tfidf.mm\"\n",
     "ids_path = \"/mnt/disks/sdb/data/abs_cits.txt\"\n",
     "cits_path = \"/mnt/disks/sdb/data/DictCits.h5\"\n",
-    "out_path = \"/mnt/disks/sdc/data/\"\n",
+    "out_path = \"/mnt/disks/sdd/data/\"\n",
     "dict_path = \"/mnt/disks/sdb/data/dct.p\"\n",
     "info_path = \"/mnt/disks/sdb/data/pub_exp_info.txt\""
    ]
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,13 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1911'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1912'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n",
+      "  NaturalNameWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1913'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1914'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -301,13 +307,7 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1931'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1932'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1933'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1934'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -353,7 +353,13 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1954'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1955'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n",
+      "  NaturalNameWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1956'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1957'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -393,13 +399,7 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1974'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1975'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1976'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1977'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -447,7 +447,13 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1998'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '1999'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n",
+      "  NaturalNameWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2000'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2001'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -479,13 +485,7 @@
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2014'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2015'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  NaturalNameWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2016'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
       "  NaturalNameWarning)\n",
       "/home/User1/anaconda3/lib/python3.6/site-packages/tables/path.py:112: NaturalNameWarning: object name is not a valid Python identifier: '2017'; it does not match the pattern ``^[a-zA-Z_][a-zA-Z0-9_]*$``; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
@@ -498,7 +498,7 @@
     }
    ],
    "source": [
-    "h5file_sim = open_file(out_path + 'similarity.h5', mode=\"w\", title=\"similarity\")\n",
+    "h5file_sim = open_file(out_path + 'similarityII.h5', mode=\"w\", title=\"similarity\")\n",
     "for year in years:\n",
     "    group = h5file_sim.create_group(\"/\", str(year))\n",
     "    for i in range(10):\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -559,13 +559,13 @@
     "            pairs_sim = []\n",
     "            for j in range(len(pairs_id[0])):\n",
     "                pairs_sim.append([comp_map[pairs_id[0][j]],comp_map[pairs_id[1][j]],sim[pairs_id[0][j],pairs_id[1][j]]])\n",
-    "            output.put([pairs_sim,line_cits['year_citant'],str(citant)[0]])\n",
+    "            output.put([pairs_sim,line_cits['year_citant'],str(citant)[-1]])\n",
     "    h5file_cits.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +575,7 @@
     "    start_time = time.time()\n",
     "    counter = 0\n",
     "    f = open(out_path+'progress.txt','w')\n",
-    "    h5file_sim = open_file(out_path + 'similarity.h5', mode=\"a\", title=\"similarity\")\n",
+    "    h5file_sim = open_file(out_path + 'similarityII.h5', mode=\"a\", title=\"similarity\")\n",
     "    while True:\n",
     "        args = output.get()\n",
     "        if args:\n",
@@ -624,8 +624,9 @@
     "    p = mp.Process(target=compute_sim, args=(inqueue, output))\n",
     "    jobs.append(p)\n",
     "    p.start()\n",
-    "#for i in idx_incl:\n",
-    "for i in range(nb_l_cits):\n",
+    "idx_citant = np.arange(nb_l_cits)\n",
+    "np.random.shuffle(idx_citant)\n",
+    "for i in idx_citant:\n",
     "    inqueue.put(i)\n",
     "for i in range(num_processes):\n",
     "    # Send the sentinal to tell Simulation to end\n",
