--- a/py/pairs_to_h5.ipynb
+++ b/py/pairs_to_h5.ipynb
@@ -20,6 +20,7 @@
     "class citExp(IsDescription):\n",
     "    citant = UInt32Col()\n",
     "    cite = UInt32Col()\n",
+    "    year = UInt16Col()\n",
     "    \n",
     "    "
    ]
@@ -27,13 +28,31 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "h5file = open_file(data_path+\"citations.h5\", mode=\"w\", title=\"citations\")\n",
     "group = h5file.create_group(\"/\", 'citations')\n",
     "table = h5file.create_table(group, 'cits', citExp)\n",
     "citation = table.row\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dict_year = {}\n",
+    "with open(info_path, newline='') as f:\n",
+    "    reader = csv.reader(f,delimiter='\\t', quoting=csv.QUOTE_NONE)\n",
+    "    next(reader)\n",
+    "    for line in reader:        \n",
+    "        dict_year[int(line[0])] = int(line[2])"
    ]
   },
   {
